add code for drinks review
